bin/tests/snapshots/blank_lines__e52c694812994a0301282ad0f3700930_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;



  beta = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,5 @@
 {
   alpha = 1;
 
-
-
   beta = 2;
 }
