bin/tests/snapshots/blank_lines__e52c694812994a0301282ad0f3700930_lint_errfmt.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;



  beta = 2;
}
---
<temp_file_path>>2:13:W:35:[blank_lines] no more than one blank line may follow one another
