bin/tests/snapshots/blank_lines__e52c694812994a0301282ad0f3700930_lint_json.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;



  beta = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "blank_lines",
      "note": "Excess blank lines",
      "code": 35,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 13
            },
            "to": {
              "line": 6,
              "column": 3
            }
          },
          "message": "no more than one blank line may follow one another",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 13
              },
              "to": {
                "line": 6,
                "column": 3
              }
            },
            "fix": "\n\n  "
          }
        }
      ]
    }
  ]
}
