bin/tests/snapshots/blank_lines__e52c694812994a0301282ad0f3700930_lint_stderr.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;



  beta = 2;
}
---
[blank_lines] Warning: Excess blank lines
   ╭─[ <temp_file_path>:2:13 ]
   │
 2 │ ╭─▶   alpha = 1;
   ┆ ┆   
 6 │ ├─▶   beta = 2;
   │ │                 
   │ ╰───────────────── no more than one blank line may follow one another
───╯
