bin/tests/snapshots/blank_lines__e56f37d4839ba9eb04d9aa7864327a7a_lint_errfmt.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;

  text = ''
    foo


    bar
  '';
}
---
